--- a/Sanitize/Client/Pages/Index.razor
+++ b/Sanitize/Client/Pages/Index.razor
@@ -2,8 +2,5 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+Welcome to sanitizer app, please navigate to the link you are looking for.
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
